fix broken styles

--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -125,6 +125,7 @@
 
 .weatherDay__dayOfWeek {
   display: flex;
+  color: #141414;
   font-size: 1rem;
 }
 
@@ -144,6 +145,7 @@
 .weatherDay--selected .dayOrNight {
   align-self: flex-start;
   /* border: 1px solid blue; */
+  color: #141414;
   padding: 0rem;
   margin-left: 1rem;
   font-size: 1.5rem;
@@ -181,6 +183,7 @@
   margin-left: 1rem;
   height: 100%;
   flex-basis: 55%;
+  color: #141414;
 }
 
 .weatherDay__icon {
